--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,14 @@
   --btn-blue-base: #244767;
   --btn-blue-hover: #1b4266;
   --bg-red: #702424;
-  --btn-red: #571c1c;
+  --btn-red: #a13030;
+  --btn-red-hover:#9f0000;
   --btn-green-base: #276627;
   --btn-green-hover: #368536;
   --bg-green: #164b16;
   --bg-darkgreen: #1a341a;
+  --bg-gold: #cf900e;
   --transparent: #ffffff00;
-  --btn-red-hover:#420000;
 }
 
 html, body , #root, .game-background{
@@ -25,7 +26,7 @@ body {
 }
 
 .game-background {
-  min-height: 600px;
+  min-height: 700px;
   min-width: 900px;
   background-color: var(--bg-red);
 }
@@ -35,4 +36,11 @@ body {
   top: 0;
   left: 0;
   z-index: 2;
+}
+
+
+@media screen and (max-width: 1200px) {
+.gameTable, .card-container{
+  transform: scale(0.8);
+}
 }
