--- a/src/components/styles/Menu.css
+++ b/src/components/styles/Menu.css
@@ -5,4 +5,17 @@
   padding-top: 3%;
   gap: 20px;
   align-items: center;
+  box-sizing: border-box;
+  height: 100%;
+  /* background-image: url("../../textures/card_image.png"); */
+  background-repeat: no-repeat;
+background-position-x: 45%;
+background-position-y: 55%;
+background-size: 30%;
+}
+
+.background-image{
+  padding-top: 100px;
+    width: 550px;
+    padding-right: 10px;
 }
