--- a/src/components/styles/Game.scss
+++ b/src/components/styles/Game.scss
@@ -16,10 +16,10 @@ $white-color: #ffffff;
 
     .poker-table {
         position: absolute;
-        top: calc(5% + 100px);
-        bottom: calc(5% + 100px);
-        right: calc(10% + 100px);
-        left: calc(10% + 100px);
+        top: 100px;
+        bottom: 100px;
+        right: 100px;
+        left: 100px;
         justify-self: center;
         align-self: center;
         // position: relative;
@@ -32,16 +32,11 @@ $white-color: #ffffff;
     }
     .inside-ring {
         position: absolute;
-        top: calc(13% + 100px);
-        bottom: calc(13% + 100px);
-        right: calc(15% + 100px);
-        left: calc(15% + 100px);
-        // width: calc(100% - 200px);
-        // height: calc(100% - 200px);
-        // position: absolute;
-        // top: 50%;
-        // left: 50%;
-        border: 5px rgba($white-color, 0.5) solid;
+        top: 190px;
+        bottom: 190px;
+        right: 240px;
+        left: 240px;
+        border: 5px rgba($white-color, 0.2) solid;
         justify-self: center;
         align-self: center;
         border-radius: 180px;
@@ -50,10 +45,10 @@ $white-color: #ffffff;
 
     .outside-ring {
         position: absolute;
-        top: calc(9% + 100px);
-        bottom: calc(9% + 100px);
-        right: calc(13% + 100px);
-        left: calc(13% + 100px);
+        top: 150px;
+        bottom: 150px;
+        right: 160px;
+        left: 160px;
 
         // position: absolute;
         // width: calc(100% - 100px);
@@ -70,7 +65,7 @@ $white-color: #ffffff;
     }
     .card-container-topmid {
         position: absolute;
-        top: 5%;
+        top: 1%;
         // transform: translate(-50%, -50%);
         // width: 200px;
         // height: 200px;
@@ -80,7 +75,7 @@ $white-color: #ffffff;
     .card-container-midleft {
         position: absolute;
         // top: 50%;
-        left: 10%;
+        left: 1%;
         // transform: translate(-50%, -50%);
         // width: 200px;
         // height: 200px;
@@ -90,7 +85,7 @@ $white-color: #ffffff;
     .card-container-midright {
         position: absolute;
         // top: 50%;
-        right: 10%;
+        right: 1%;
         // transform: translate(50%, -50%);
         // width: 200px;
         // height: 200px;
@@ -100,10 +95,15 @@ $white-color: #ffffff;
     .card-container-botmid {
         position: absolute;
         // left: 50%;
-        bottom: 5%;
+        bottom: 1%;
         // transform: translate(-50%, 50%);
         // width: 200px;
         // height: 200px;
         // background-color: yellow;
     }
+}
+
+.gameTable,
+.card-container {
+    transition: all 500ms ease-in;
 }
