--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   --btn-blue-hover: #1b4266;
   --bg-red: #702424;
   --btn-red: #a13030;
-  --btn-red-hover:#9f0000;
+  --btn-red-hover: #9f0000;
   --btn-green-base: #276627;
   --btn-green-hover: #368536;
   --bg-green: #164b16;
@@ -12,7 +12,10 @@
   --transparent: #ffffff00;
 }
 
-html, body , #root, .game-background{
+html,
+body,
+#root,
+.game-background {
   height: 100%;
   width: 100%;
 }
@@ -26,7 +29,7 @@ body {
 }
 
 .game-background {
-  min-height: 700px;
+  min-height: 600px;
   min-width: 900px;
   background-color: var(--bg-red);
 }
@@ -38,9 +41,9 @@ body {
   z-index: 2;
 }
 
-
-@media screen and (max-width: 1200px) {
-.gameTable, .card-container{
-  transform: scale(0.8);
+.gameTable,
+.card-container {
+  transform: scale(0.6);
 }
-}
+/* @media screen and (max-width: 1200px) {
+} */
