--- a/src/components/styles/Game.scss
+++ b/src/components/styles/Game.scss
@@ -5,105 +5,107 @@ $poker-table-outside-ring-border-color: #c29f41;
 $white-color: #ffffff;
 
 .poker-container {
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    /* padding: 5%; */
-    box-sizing: border-box;
-    position: relative;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  //   max-width: 1100px;
+  min-width: 800px;
+  width: 80%;
+  height: 100%;
+  /* padding: 5%; */
+  box-sizing: border-box;
+  position: relative;
 
-    .poker-table {
-        position: absolute;
-        top: 100px;
-        bottom: 100px;
-        right: 100px;
-        left: 100px;
-        justify-self: center;
-        align-self: center;
-        // position: relative;
-        // width: 70%;
-        // height: 70%;
-        background-color: $poker-table-outside-ring-color;
-        border-radius: 180px;
-        box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.75), inset 0px 0px 22px 2px rgba(0, 0, 0, 0.75);
-        // box-shadow: 10px 10px 200px 0px rgba(0, 0, 0, 0.55), inset 0px 0px 18px 4px rgba(0, 0, 0, 0.75);
-    }
-    .inside-ring {
-        position: absolute;
-        top: 190px;
-        bottom: 190px;
-        right: 240px;
-        left: 240px;
-        border: 5px rgba($white-color, 0.2) solid;
-        justify-self: center;
-        align-self: center;
-        border-radius: 180px;
-        // transform: translate(-50%, -50%);
-    }
+  .poker-table {
+    position: absolute;
+    top: 100px;
+    bottom: 100px;
+    right: 100px;
+    left: 100px;
+    justify-self: center;
+    align-self: center;
+    // position: relative;
+    // width: 70%;
+    // height: 70%;
+    background-color: $poker-table-outside-ring-color;
+    border-radius: 180px;
+    box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.75), inset 0px 0px 22px 2px rgba(0, 0, 0, 0.75);
+    // box-shadow: 10px 10px 200px 0px rgba(0, 0, 0, 0.55), inset 0px 0px 18px 4px rgba(0, 0, 0, 0.75);
+  }
+  .inside-ring {
+    position: absolute;
+    top: 190px;
+    bottom: 190px;
+    right: 240px;
+    left: 240px;
+    border: 5px rgba($white-color, 0.2) solid;
+    justify-self: center;
+    align-self: center;
+    border-radius: 180px;
+    // transform: translate(-50%, -50%);
+  }
 
-    .outside-ring {
-        position: absolute;
-        top: 150px;
-        bottom: 150px;
-        right: 160px;
-        left: 160px;
+  .outside-ring {
+    position: absolute;
+    top: 150px;
+    bottom: 150px;
+    right: 160px;
+    left: 160px;
 
-        // position: absolute;
-        // width: calc(100% - 100px);
-        // height: calc(100% - 80px);
-        // top: 50%;
-        // left: 50%;
-        background: $poker-table-color-light;
-        background: radial-gradient(circle, $poker-table-color-light -30%, $poker-table-color-dark 90%);
-        border-radius: 180px;
-        justify-self: center;
-        align-self: center;
-        border: 5px $poker-table-outside-ring-border-color solid;
-        // transform: translate(-50%, -50%);
-    }
-    .card-container-topmid {
-        position: absolute;
-        top: 1%;
-        // transform: translate(-50%, -50%);
-        // width: 200px;
-        // height: 200px;
-        // background-color: yellow;
-    }
+    // position: absolute;
+    // width: calc(100% - 100px);
+    // height: calc(100% - 80px);
+    // top: 50%;
+    // left: 50%;
+    background: $poker-table-color-light;
+    background: radial-gradient(circle, $poker-table-color-light -30%, $poker-table-color-dark 90%);
+    border-radius: 180px;
+    justify-self: center;
+    align-self: center;
+    border: 5px $poker-table-outside-ring-border-color solid;
+    // transform: translate(-50%, -50%);
+  }
+  .card-container-topmid {
+    position: absolute;
+    top: 1%;
+    // transform: translate(-50%, -50%);
+    // width: 200px;
+    // height: 200px;
+    // background-color: yellow;
+  }
 
-    .card-container-midleft {
-        position: absolute;
-        // top: 50%;
-        left: 1%;
-        // transform: translate(-50%, -50%);
-        // width: 200px;
-        // height: 200px;
-        // background-color: yellow;
-    }
+  .card-container-midleft {
+    position: absolute;
+    // top: 50%;
+    left: 1%;
+    // transform: translate(-50%, -50%);
+    // width: 200px;
+    // height: 200px;
+    // background-color: yellow;
+  }
 
-    .card-container-midright {
-        position: absolute;
-        // top: 50%;
-        right: 1%;
-        // transform: translate(50%, -50%);
-        // width: 200px;
-        // height: 200px;
-        // background-color: yellow;
-    }
+  .card-container-midright {
+    position: absolute;
+    // top: 50%;
+    right: 1%;
+    // transform: translate(50%, -50%);
+    // width: 200px;
+    // height: 200px;
+    // background-color: yellow;
+  }
 
-    .card-container-botmid {
-        position: absolute;
-        // left: 50%;
-        bottom: 1%;
-        // transform: translate(-50%, 50%);
-        // width: 200px;
-        // height: 200px;
-        // background-color: yellow;
-    }
+  .card-container-botmid {
+    position: absolute;
+    // left: 50%;
+    bottom: 1%;
+    // transform: translate(-50%, 50%);
+    // width: 200px;
+    // height: 200px;
+    // background-color: yellow;
+  }
 }
 
 .gameTable,
 .card-container {
-    transition: all 500ms ease-in;
+  transition: all 500ms ease-in;
 }
