change folder structure

--- a/src/components/game/card/Card.css
+++ b/src/components/game/card/Card.css
@@ -17,7 +17,7 @@
 }
 
 .card-hidden {
-  background-image: url("../../textures/card_hidden_red.svg");
+  background-image: url('../../../textures/card_hidden_red.svg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
