fix resize screen issues

--- a/src/components/game/game-log/GameLog.scss
+++ b/src/components/game/game-log/GameLog.scss
@@ -1,5 +1,6 @@
 .game-log {
-  background-color: var(--bg-darkgreen);
+  opacity: 0.5;
+  background-color: #520000;
   color: white;
   height: 100%;
   text-align: left;
