--- a/src/App.scss
+++ b/src/App.scss
@@ -26,9 +26,12 @@ body {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 17px;
+  min-width: 1130px;
 }
 
 .game-background {
+  display: flex;
+  justify-content: space-evenly;
   min-height: 600px;
   min-width: 900px;
   background-color: var(--bg-red);
@@ -43,7 +46,7 @@ body {
 
 .gameTable,
 .card-container {
-  transform: scale(0.6);
+  //   transform: scale(0.6);
 }
 /* @media screen and (max-width: 1200px) {
 } */
