--- a/src/components/game/Game.scss
+++ b/src/components/game/Game.scss
@@ -20,8 +20,8 @@ $white-color: #ffffff;
     position: absolute;
     top: 100px;
     bottom: 100px;
-    right: 100px;
-    left: 100px;
+    right: 60px;
+    left: 60px;
     justify-self: center;
     align-self: center;
     // position: relative;
@@ -32,25 +32,26 @@ $white-color: #ffffff;
     box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.75), inset 0px 0px 22px 2px rgba(0, 0, 0, 0.75);
     // box-shadow: 10px 10px 200px 0px rgba(0, 0, 0, 0.55), inset 0px 0px 18px 4px rgba(0, 0, 0, 0.75);
   }
-  .inside-ring {
-    position: absolute;
-    top: 190px;
-    bottom: 190px;
-    right: 240px;
-    left: 240px;
-    border: 5px rgba($white-color, 0.2) solid;
-    justify-self: center;
-    align-self: center;
-    border-radius: 180px;
-    // transform: translate(-50%, -50%);
-  }
+
+  //   .inside-ring {
+  //     position: absolute;
+  //     top: 190px;
+  //     bottom: 190px;
+  //     right: 210px;
+  //     left: 210px;
+  //     border: 5px rgba($white-color, 0.2) solid;
+  //     justify-self: center;
+  //     align-self: center;
+  //     border-radius: 180px;
+  //     // transform: translate(-50%, -50%);
+  //   }
 
   .outside-ring {
     position: absolute;
     top: 150px;
     bottom: 150px;
-    right: 160px;
-    left: 160px;
+    right: 120px;
+    left: 120px;
 
     // position: absolute;
     // width: calc(100% - 100px);
@@ -77,7 +78,7 @@ $white-color: #ffffff;
   .card-container-midleft {
     position: absolute;
     // top: 50%;
-    left: 1%;
+    left: 5px;
     // transform: translate(-50%, -50%);
     // width: 200px;
     // height: 200px;
@@ -87,7 +88,7 @@ $white-color: #ffffff;
   .card-container-midright {
     position: absolute;
     // top: 50%;
-    right: 1%;
+    right: 5px;
     // transform: translate(50%, -50%);
     // width: 200px;
     // height: 200px;
