--- a/src/components/game/player/Player.scss
+++ b/src/components/game/player/Player.scss
@@ -19,13 +19,23 @@
     flex-direction: row-reverse;
   }
 
+  &.folded {
+    opacity: 0.3;
+  }
+
   .playerInfo {
     padding: 5px;
     border-radius: 10px;
 
+    &.activePlayerInfo {
+      background-color: rgb(0 255 2);
+      color: black;
+      margin-bottom: 8px;
+    }
+
     .playerInfoBody {
       /* background-color: var(--bg-darkgreen); */
-      background-color: #c3a24c;
+      background-color: rgba(28, 65, 121, 0.84);
       border-radius: 8px;
       padding: 5px;
 
