--- a/src/components/game/bet-controls/BetControls.scss
+++ b/src/components/game/bet-controls/BetControls.scss
@@ -1,6 +1,6 @@
 .bet-controls-container {
   font-size: 1.2em;
-  background-color: rgba(8, 9, 8, 0.8);
+  background-color: rgb(154 157 154 / 60%);
   padding: 15px;
   border-radius: 10px;
   display: flex;
@@ -48,7 +48,8 @@
     }
 
     .control-btn {
-      padding: 15px 10px;
+      position: relative;
+      padding: 0px 0px;
       border-radius: 5px;
       text-align: center;
       cursor: pointer;
@@ -57,34 +58,70 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      box-sizing: border-box;
+      overflow: hidden;
+      // box-sizing: border-box;
+      transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
+      box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+        0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+
+      &:hover {
+        box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14),
+          0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+      }
+
+      &:active {
+        box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14),
+          0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+      }
+
+      &:after {
+        content: "";
+        background: rgba(255, 255, 255, 0.3);
+        border-radius: 50%;
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 200%;
+        height: 200%;
+        opacity: 0;
+        transition: all 0.5s;
+      }
+
+      &:active:after {
+        width: 0;
+        height: 0;
+        opacity: 1;
+        transition: 0s;
+      }
 
       &#foldBtn {
         background-color: #474747;
-        &:hover {
-          background-color: #383838;
-        }
+        // &:hover {
+        //   background-color: #383838;
+        // }
       }
 
       &#betCheckBtn {
         background-color: var(--btn-blue-base);
-        &:hover {
-          background-color: var(--btn-blue-hover);
-        }
+        // &:hover {
+        //   background-color: var(--btn-blue-hover);
+        // }
       }
 
       &#raiseBtn {
         background-color: #1d684d;
-        &:hover {
-          background-color: #227a5a;
-        }
+        // &:hover {
+        //   background-color: #227a5a;
+        // }
       }
 
       &#allInBtn {
         background-color: #217c1b;
-        &:hover {
-          background-color: #2a8923;
-        }
+        // &:hover {
+        //   background-color: #2a8923;
+        // }
       }
     }
 
