fix bug ==> there was bug when the game was finished and player left the game and then cameback before the setTimeOut [5s] was finished

--- a/src/components/game/player/Player.scss
+++ b/src/components/game/player/Player.scss
@@ -36,14 +36,13 @@
         box-shadow: 0px 12px 13px 8px rgba(0, 0, 0, 0.3);
 
         &::before {
-          content: "";
+          content: '';
           position: absolute;
           width: 300%;
           height: 100%;
           top: 0;
           z-index: -1;
-          background: linear-gradient(268deg, rgba(0, 0, 0, 0) 35%, rgba(255, 255, 255, 0.6) 50%, rgba(0, 0, 0, 0) 65%)
-            rgba(98, 245, 71, 0.9);
+          background: linear-gradient(268deg, rgba(0, 0, 0, 0) 35%, rgba(255, 255, 255, 0.6) 50%, rgba(0, 0, 0, 0) 65%) rgba(98, 245, 71, 0.9);
           // background: linear-gradient(268deg, rgba(0, 0, 0, 0) 33%, rgba(255, 255, 255, 0.9) 50%, rgba(0, 0, 0, 0) 66%)
           //   #c2b336;
           animation: MOVE-BG 1.5s infinite linear;
@@ -53,7 +52,7 @@
 
     .playerInfoBody {
       /* background-color: var(--bg-darkgreen); */
-      background-image: linear-gradient(41deg, #7d8489 0%, #c4c5c6 74%);
+      background-image: linear-gradient(41deg, #3e3e3e 0%, #cccccc 74%);
       box-shadow: 0 3px 14px #000;
       border-radius: 8px;
       padding: 5px;
