change layout and fix some styling issues

--- a/src/components/game/bet-controls/BetControls.scss
+++ b/src/components/game/bet-controls/BetControls.scss
@@ -1,68 +1,98 @@
 .bet-controls-container {
   font-size: 1.2em;
   background-color: rgb(154 157 154 / 60%);
-  padding: 15px;
-  border-radius: 10px;
+  padding: 0 15px;
+  border-radius: 10px 10px 0 0;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  position: absolute;
+  width: 70%;
+  min-width: 1000px;
+  bottom: 0;
 
-  .controls {
-    display: grid;
-    grid-template-columns: repeat(4, 60px);
-    gap: 10px;
-    grid-auto-rows: 20px 40px 60px 40px;
-    margin-top: 15px;
-
+  .bet-amount-container {
+    display: flex;
+    flex: 1;
+    padding-right: 10px;
     .min-bet-value-label {
       text-align: left;
       font-size: 0.8em;
+      display: flex;
+      align-items: center;
     }
-
     .max-bet-value-label {
       text-align: right;
       font-size: 0.8em;
+      display: flex;
+      align-items: center;
     }
 
-    #betAmountInput {
-      box-sizing: border-box;
-      padding: 5px;
-      text-align: center;
-      font-size: 1.3em;
-      color: white;
-      font-weight: 600;
-      background-color: var(--transparent);
-      border: none;
-      width: 60px;
-    }
-
-    .slider-container {
-      grid-column: 1 / span 3;
-
-      #betSlider {
+    .bet-amount {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      flex: 1;
+      #betAmountInput {
+        width: 90%;
+        margin-top: 5px;
+        text-align: center;
+        outline: none;
+        border: none;
+        border-radius: 10px;
+        font-size: 1.3em;
+        font-weight: 600;
+        color: white;
+        background-color: #9b7c7a;
+        box-sizing: border-box;
+        &:focus {
+          box-shadow: 0px 3px 10px 3px rgba(0, 0, 0, 0.3);
+        }
+      }
+      .slider-container {
         width: 100%;
-        height: 30px;
-        transition: opacity 0.2s;
+
+        #betAmountSlider {
+          width: 100%;
+          height: 30px;
+          transition: opacity 0.2s;
+        }
       }
     }
+  }
 
+  .action-buttons-container {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .peak-cards-btn-container {
+    display: flex;
+    justify-content: flex-end;
+    flex: 1;
+  }
+
+  .btn-container {
+    min-width: 110px;
+    padding: 0 5px;
     .control-btn {
       position: relative;
-      padding: 0px 0px;
+      font-size: 1rem;
+      padding: 0px 10px;
       border-radius: 5px;
       text-align: center;
       cursor: pointer;
-      height: 100%;
-      width: 60px;
+      height: 40px;
       display: flex;
       align-items: center;
       justify-content: center;
       overflow: hidden;
       // box-sizing: border-box;
       transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
-      box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
-        0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+
+      box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.5), inset 0px 0px 6px 2px rgba(0, 0, 0, 0.4);
 
       &:hover {
         box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14),
@@ -84,7 +114,7 @@
         left: 50%;
         transform: translate(-50%, -50%);
         width: 200%;
-        height: 200%;
+        height: 400%;
         opacity: 0;
         transition: all 0.5s;
       }
@@ -97,49 +127,41 @@
       }
 
       &#foldBtn {
-        background-color: #474747;
-        // &:hover {
-        //   background-color: #383838;
-        // }
+        background-color: rgb(137, 42, 35);
+        &:hover {
+          background-color: rgb(124, 33, 27);
+        }
       }
 
       &#betCheckBtn {
-        background-color: var(--btn-blue-base);
-        // &:hover {
-        //   background-color: var(--btn-blue-hover);
-        // }
+        background-color: rgb(35, 42, 137);
+        &:hover {
+          background-color: rgb(27, 33, 124);
+        }
       }
 
       &#raiseBtn {
-        background-color: #1d684d;
-        // &:hover {
-        //   background-color: #227a5a;
-        // }
+        background-color: #227a5a;
+        &:hover {
+          background-color: #1d684d;
+        }
       }
 
       &#allInBtn {
-        background-color: #217c1b;
-        // &:hover {
-        //   background-color: #2a8923;
-        // }
+        background-color: rgb(42, 137, 35);
+        &:hover {
+          background-color: rgb(33, 124, 27);
+        }
+      }
+
+      &#peakCardsBtn {
+        background-color: rgb(147, 146, 31);
+        box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
+          0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+        &:hover {
+          background-color: rgb(135, 132, 26);
+        }
       }
     }
-
-    .peak-cards-btn {
-      background-color: var(--btn-blue-hover);
-      box-sizing: border-box;
-      padding: 5px 10px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      grid-column: 1 / span 4;
-      height: 100%;
-      cursor: pointer;
-    }
   }
-}
-
-.player-money-left {
-  text-align: center;
-  font-weight: 600;
 }
