--- a/src/components/game/Game.scss
+++ b/src/components/game/Game.scss
@@ -8,11 +8,9 @@ $white-color: #ffffff;
   justify-content: center;
   align-items: center;
   display: flex;
-  //   max-width: 1100px;
   min-width: 800px;
   width: 80%;
-  height: 100%;
-  /* padding: 5%; */
+  height: calc(100% - 80px);
   box-sizing: border-box;
   position: relative;
 
@@ -24,27 +22,10 @@ $white-color: #ffffff;
     left: 60px;
     justify-self: center;
     align-self: center;
-    // position: relative;
-    // width: 70%;
-    // height: 70%;
     background-color: $poker-table-outside-ring-color;
     border-radius: 180px;
     box-shadow: 0px 0px 50px 0px rgba(0, 0, 0, 0.75), inset 0px 0px 22px 2px rgba(0, 0, 0, 0.75);
-    // box-shadow: 10px 10px 200px 0px rgba(0, 0, 0, 0.55), inset 0px 0px 18px 4px rgba(0, 0, 0, 0.75);
   }
-
-  //   .inside-ring {
-  //     position: absolute;
-  //     top: 190px;
-  //     bottom: 190px;
-  //     right: 210px;
-  //     left: 210px;
-  //     border: 5px rgba($white-color, 0.2) solid;
-  //     justify-self: center;
-  //     align-self: center;
-  //     border-radius: 180px;
-  //     // transform: translate(-50%, -50%);
-  //   }
 
   .outside-ring {
     position: absolute;
@@ -53,63 +34,40 @@ $white-color: #ffffff;
     right: 120px;
     left: 120px;
 
-    // position: absolute;
-    // width: calc(100% - 100px);
-    // height: calc(100% - 80px);
-    // top: 50%;
-    // left: 50%;
     background: $poker-table-color-light;
     background: radial-gradient(circle, $poker-table-color-light -30%, $poker-table-color-dark 90%);
     border-radius: 180px;
     justify-self: center;
     align-self: center;
     border: 5px $poker-table-outside-ring-border-color solid;
-    // transform: translate(-50%, -50%);
   }
   .card-container-topmid {
     position: absolute;
     top: 1%;
-    // transform: translate(-50%, -50%);
-    // width: 200px;
-    // height: 200px;
-    // background-color: yellow;
   }
 
   .card-container-midleft {
     position: absolute;
-    // top: 50%;
     left: 5px;
-    // transform: translate(-50%, -50%);
-    // width: 200px;
-    // height: 200px;
-    // background-color: yellow;
   }
 
   .card-container-midright {
     position: absolute;
-    // top: 50%;
     right: 5px;
-    // transform: translate(50%, -50%);
-    // width: 200px;
-    // height: 200px;
-    // background-color: yellow;
   }
 
   .card-container-botmid {
     position: absolute;
-    // left: 50%;
     bottom: 1%;
-    // transform: translate(-50%, 50%);
-    // width: 200px;
-    // height: 200px;
-    // background-color: yellow;
   }
 }
 
-.controls-container {
+.game-log-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 10px;
+  height: calc(100% - 190px);
   min-width: 300px;
+  box-sizing: border-box;
 }
