add game events log functionality

--- a/src/components/game/Game.scss
+++ b/src/components/game/Game.scss
@@ -68,6 +68,7 @@ $white-color: #ffffff;
   justify-content: space-between;
   padding: 10px;
   height: calc(100% - 190px);
+  width: 350px;
   min-width: 300px;
   box-sizing: border-box;
 }
