--- a/src/components/game/game-log/GameLog.scss
+++ b/src/components/game/game-log/GameLog.scss
@@ -8,7 +8,23 @@
   flex-direction: column;
   padding: 12px;
   border-radius: 12px;
-  //   min-width: 450px;
+  overflow: hidden;
+  &:hover {
+    overflow-y: auto;
+  }
+}
+
+.game-log::-webkit-scrollbar {
+  width: 7px;
+}
+
+.game-log::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.game-log::-webkit-scrollbar-thumb {
+  background-color: #ececfb;
+  border-radius: 20px;
 }
 
 .log {
