--- a/src/components/game/player/Player.scss
+++ b/src/components/game/player/Player.scss
@@ -85,7 +85,7 @@
     }
     &.winnerPlayerInfo .playerInfoBody::before {
       background: linear-gradient(268deg, rgba(0, 0, 0, 0) 33%, rgba(255, 255, 255, 0.9) 50%, rgba(0, 0, 0, 0) 66%)
-        #e9d426;
+        #f7bf22;
     }
   }
 
