--- a/src/components/game/game-table/GameTable.scss
+++ b/src/components/game/game-table/GameTable.scss
@@ -2,7 +2,7 @@
   transform: translateX(324 - ($nthChild - 2) * 62px);
 }
 
-.gameTable {
+.game-board {
   position: relative;
   width: 370px;
   height: 180px;
@@ -34,7 +34,7 @@
     }
   }
 
-  .tableCardsContainer {
+  .board-cards-container {
     display: flex;
     justify-content: left;
     gap: 12px;
@@ -42,7 +42,7 @@
     height: 75px;
     padding-left: 50px;
     &::before {
-      content: '';
+      content: "";
       min-height: 75px;
     }
     .card {
@@ -62,14 +62,14 @@
     }
   }
 
-  .tableInfo {
+  .pot-info {
     display: flex;
     align-items: center;
     font-size: 1.3em;
     font-weight: 600;
   }
 
-  .gameInfo {
+  .game-info {
     width: 100%;
     height: 100%;
     display: flex;
