--- a/src/components/game/bet-controls/BetControls.scss
+++ b/src/components/game/bet-controls/BetControls.scss
@@ -74,7 +74,7 @@
     flex: 1;
   }
 
-  .btn-container {
+  .control-btn-container {
     min-width: 110px;
     padding: 0 5px;
     .control-btn {
