--- a/src/components/game/game-table/button/Button.scss
+++ b/src/components/game/game-table/button/Button.scss
@@ -43,7 +43,7 @@
   display: flex;
 }
 
-.spinContainer {
+.spin-container {
   .wrapper {
     display: flex;
     justify-content: center;
@@ -53,25 +53,45 @@
     transition-duration: 0.1s;
   }
 
-  .spinButton {
+  .spin-button {
     max-height: 100%;
     display: block;
     position: relative;
     height: 100%;
     aspect-ratio: 1/1;
 
-    .spinFrame {
+    .spin-frame {
       border-radius: 50%;
       position: absolute;
       width: 100%;
       height: 100%;
-      background: radial-gradient(ellipse farthest-corner at right bottom, #fedb37 0%, #fdb931 8%, #9f7928 30%, #8a6e2f 40%, transparent 80%),
-        radial-gradient(ellipse farthest-corner at left top, #ffffff 0%, #ffffac 8%, #d1b464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
-      -webkit-mask-image: radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 60%, #000000 60%, #000000 100%);
+      background: radial-gradient(
+          ellipse farthest-corner at right bottom,
+          #fedb37 0%,
+          #fdb931 8%,
+          #9f7928 30%,
+          #8a6e2f 40%,
+          transparent 80%
+        ),
+        radial-gradient(
+          ellipse farthest-corner at left top,
+          #ffffff 0%,
+          #ffffac 8%,
+          #d1b464 25%,
+          #5d4a1f 62.5%,
+          #5d4a1f 100%
+        );
+      -webkit-mask-image: radial-gradient(
+        circle at 50% 50%,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 60%,
+        #000000 60%,
+        #000000 100%
+      );
       box-shadow: inset 0 2px 4px rgba(212, 212, 212, 0.472), inset 0 -2px 4px rgba(0, 0, 0, 0.472);
     }
   }
-  .spinBlur {
+  .spin-blur {
     position: absolute;
     left: 50%;
     top: 50%;
