--- a/src/components/setting/Setting.scss
+++ b/src/components/setting/Setting.scss
@@ -26,7 +26,7 @@
   align-items: center;
 }
 
-.playerCount {
+.player-count {
   display: flex;
   gap: 5px;
 }
@@ -66,6 +66,6 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-input[type='number'] {
+input[type="number"] {
   -moz-appearance: textfield;
 }
