--- a/src/App.scss
+++ b/src/App.scss
@@ -29,7 +29,7 @@ body {
   justify-content: space-evenly;
   min-height: 600px;
   min-width: 900px;
-  background-color: var(--bg-red);
+  background-color: red;
 }
 
 .backButton_container {
