--- a/src/components/game/Game.scss
+++ b/src/components/game/Game.scss
@@ -65,9 +65,13 @@ $poker-table-outside-ring-border-color: #c29f41;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 10px;
+  padding: 20px 20px 0px 0px;
   height: calc(100% - 190px);
   width: 350px;
   min-width: 300px;
   box-sizing: border-box;
+}
+
+.game-board-container {
+  transform: scale(0.85);
 }
