--- a/src/components/game/bet-controls/BetControls.scss
+++ b/src/components/game/bet-controls/BetControls.scss
@@ -10,6 +10,8 @@
   width: 70%;
   min-width: 1000px;
   bottom: 0;
+  padding-top: 5px;
+  padding-bottom: 5px;
 
   .bet-amount-container {
     display: flex;
@@ -46,6 +48,7 @@
         color: white;
         background-color: #9b7c7a;
         box-sizing: border-box;
+        cursor: pointer;
         &:focus {
           box-shadow: 0px 3px 10px 3px rgba(0, 0, 0, 0.3);
         }
@@ -57,6 +60,7 @@
           width: 100%;
           height: 30px;
           transition: opacity 0.2s;
+          cursor: pointer;
         }
       }
     }
@@ -89,23 +93,21 @@
       align-items: center;
       justify-content: center;
       overflow: hidden;
-      // box-sizing: border-box;
       transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
-
-      box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.5), inset 0px 0px 6px 2px rgba(0, 0, 0, 0.4);
+      box-shadow: 0px 0px 30px 6px rgba(0, 0, 0, 0.5), inset 0px 0px 6px 2px rgba(0, 0, 0, 0.4);
+      //   box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.5), inset 0px 0px 6px 2px rgba(0, 0, 0, 0.4);
 
       &:hover {
-        box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14),
-          0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+        box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+        transform: scale(0.95);
       }
 
       &:active {
-        box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14),
-          0px 3px 14px 2px rgba(0, 0, 0, 0.12);
+        box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
       }
 
       &:after {
-        content: "";
+        content: '';
         background: rgba(255, 255, 255, 0.3);
         border-radius: 50%;
         display: block;
@@ -156,8 +158,7 @@
 
       &#peakCardsBtn {
         background-color: rgb(147, 146, 31);
-        box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14),
-          0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+        box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
         &:hover {
           background-color: rgb(135, 132, 26);
         }
