--- a/src/components/game/game-log/GameLog.scss
+++ b/src/components/game/game-log/GameLog.scss
@@ -1,16 +1,18 @@
 .game-log {
-  opacity: 0.5;
+  display: flex;
+  text-align: left;
+  flex-direction: column;
   background-color: #520000;
   color: white;
-  height: 100%;
-  text-align: left;
-  display: flex;
-  flex-direction: column;
+  font-size: 1rem;
+  opacity: 0.5;
   padding: 12px;
   border-radius: 12px;
+  height: 100%;
+  box-shadow: 0 2px 12px #222222;
   overflow: hidden;
   &:hover {
-    overflow-y: auto;
+    overflow-y: overlay;
   }
 }
 
