--- a/src/components/game/player/Player.scss
+++ b/src/components/game/player/Player.scss
@@ -26,6 +26,7 @@
   .player-info {
     padding: 5px;
     border-radius: 10px;
+    transform: scale(0.8);
 
     .player-info-body {
       background-image: linear-gradient(41deg, #3e3e3e 0%, #cccccc 74%);
@@ -61,14 +62,13 @@
     &.player-info-active,
     &.player-info-winner {
       color: black;
-      margin-bottom: 8px;
-      transform: scale(1.05);
+      transform: scale(0.95);
       .player-info-body {
         background-image: none;
         box-shadow: 0px 12px 13px 8px rgba(0, 0, 0, 0.3);
 
         &::before {
-          content: "";
+          content: '';
           position: absolute;
           width: 300%;
           height: 100%;
@@ -80,12 +80,10 @@
     }
 
     &.player-info-active .player-info-body::before {
-      background: linear-gradient(268deg, rgba(0, 0, 0, 0) 35%, rgba(255, 255, 255, 0.6) 50%, rgba(0, 0, 0, 0) 65%)
-        rgba(98, 245, 71, 0.9);
+      background: linear-gradient(268deg, rgba(0, 0, 0, 0) 35%, rgba(255, 255, 255, 0.6) 50%, rgba(0, 0, 0, 0) 65%) rgba(98, 245, 71, 0.9);
     }
     &.player-info-winner .player-info-body::before {
-      background: linear-gradient(268deg, rgba(0, 0, 0, 0) 33%, rgba(255, 255, 255, 0.9) 50%, rgba(0, 0, 0, 0) 66%)
-        #f7bf22;
+      background: linear-gradient(268deg, rgba(0, 0, 0, 0) 33%, rgba(255, 255, 255, 0.9) 50%, rgba(0, 0, 0, 0) 66%) #f7bf22;
     }
   }
 
@@ -101,9 +99,9 @@
 
     .big-blind,
     .small-blind {
-      height: 40px;
-      width: 40px;
-      border: 3px dashed black;
+      height: 30px;
+      width: 30px;
+      border: 5px dashed black;
       border-radius: 50%;
       box-sizing: border-box;
       display: flex;
@@ -113,19 +111,17 @@
 
     .big-blind {
       background-color: #fee33e;
-      padding-bottom: 5px;
-      line-height: 0.7rem;
-      font-size: 0.6rem;
-      font-weight: 700;
+      font-size: 0.7rem;
+      padding-bottom: 2px;
+      font-weight: 900;
       color: black;
     }
 
     .small-blind {
       background-color: #3654d2;
-      font-size: 0.5rem;
-      letter-spacing: 0.05rem;
-      line-height: 0.6rem;
-      padding-left: 2px;
+      font-size: 0.7rem;
+      font-weight: 900;
+      border: 4px dashed black;
     }
   }
 }
